README.md reviewed. OTS_USE_BITCOIN renamed OTS_USE_BITCOIND

--- a/static/index.html
+++ b/static/index.html
@@ -28,7 +28,7 @@
       <h1 style="color: #258C90;">
         Chainpoint to OpenTimestamps converter
         <br>
-        <small>Convert your Chainpoint 2 receipt to an OpenTimestamps one</small>
+        <small>Convert Chainpoint 2 proof receipts to OpenTimestamps proofs</small>
       </h1>
     </div>
   </div>
@@ -38,7 +38,7 @@
     <div>
       <div class="form-group">
         <div id="dz" class="dropZoneContainer">
-          <div class="text">Drop the file to convert</div>
+          <div class="text">Drop the Chainpoint 2 proof receipt to convert</div>
           <div class="text small"></div>
           <input id="input" class="dropZone clickable" type="file" onchange="convert(this.files, this)">
         </div>
